--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     </a>
                   </td>
                   <td width="70%" style="vertical-align:top;padding-left:18px;">
-                    <span class="label">Actu</span>
+                    <span class="label"></span>
                     <h3 style="margin-top:0;font-size:15px;">
                       <a href="https://capitaldurable.com/isolation-des-tuyaux-un-levier-cle-de-la-renovation-energetique/">
                         Isolation des tuyaux : un levier clé de la rénovation énergétique
@@ -256,7 +256,7 @@
                     </a>
                   </td>
                   <td width="70%" style="vertical-align:top;padding-left:18px;">
-                    <span class="label">Actu</span>
+                    <span class="label"></span>
                     <h3 style="margin-top:0;font-size:15px;">
                       <a href="https://capitaldurable.com/plantation-participative-qui-seduisent-de-plus-en-plus-de-territoires/">
                         Plantation participative : qui séduisent de plus en plus de territoires
