--- a/index.html
+++ b/index.html
@@ -109,11 +109,10 @@
           <td class="padded header-bg" align="center">
 
   <img
-  class="logo"
-  src="https://raw.githubusercontent.com/mas-rgb/sample-static-site/main/logo.png"
+  src="https://cdn.jsdelivr.net/gh/mas-rgb/sample-static-site@main/logo.png"
   width="220"
   alt="Capital Durable"
-  style="display:block;margin:0 auto 18px auto;border-radius:0;"
+  style="display:block;margin:0 auto 18px auto;border:0;"
 >
 
 
